Updates to grocery section and took out some unnecessary console logging

--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
   <section class="banner intro-fridge">
   	<div class="darkbackground" style="background-color: rgba(0, 0, 0, 0);">
 			<div class="flexContainer column" style="justify-content: center; padding: 0 5vw; height: 100%;">
-				<div>
-					<h1 style="margin: 0 0 1em;">You are almost out of groceries</h1>
+				<div style="width: 40vw;">
+					<h1 style="margin: 0 0 1em;">It's Monday morning. The kids are miraculously awake and getting ready for school. You pour them each a bowl of cereal and have just enough milk leftover to add to your coffee. The fridge is looking empty, besides some dangerously old takeout and a few loose packets of ketchup. You'll need to pick up some groceries today.</h1>
 					<ul>
 						<li><p>You need to buy food and household items</p></li>
-						<li><p>Use the map to plan your shopping trip</p></li>
+						<li><p>Use the map on the next page to begin your shopping trip</p></li>
 					</ul>
 				</div>
 			</div>
@@ -115,14 +115,14 @@
 	  					</div>
 							<div class="mapKey" style="width: 100%; height: 10%; max-width: 70vh;">
 								<div style="display: flex; flex-flow: row wrap; justify-content: center;">
-									<div class="keyItem"><img class="mediumIcon" src="../images/Broccoli.png"> Healthy Options</div>
-									<div class="keyItem"><img class="mediumIcon" src="../images/Time.png"> Time Cost</div>
-									<div class="keyItem"><img class="mediumIcon" src="../images/Dollar.png"> Monetary Cost</div>
+									<div class="keyItem"><img class="mediumIcon" src="images/Broccoli.png"> Healthy Options</div>
+									<div class="keyItem"><img class="mediumIcon" src="images/Time.png"> Time Cost</div>
+									<div class="keyItem"><img class="mediumIcon" src="images/Dollar.png"> Monetary Cost</div>
 								</div>
 							</div>
   					</div>
   					<div id="map-description-container">
-  						<div>Click on a destination to get more information.</div>
+  						<div><h1>There are three local places that stock what you have on your shopping list. Click on one of the destinations <img name="bluestaricon" src="images/Store_Star.png" class="mediumIcon"> to get more information.</h1></div>
   					</div>
   				</div>
   			</div>
@@ -150,9 +150,9 @@
 	  		<!-- Shopping Spree SubSection -->
 	  		<div id="storeContainer" style="position: relative; height: 100%; left: 200vw; top: -150%">
 	    		<div id="shoppingexplanation" style="flex: 1 0 auto; padding: 0 2em;">
-	    			<p>
-	    				You found everything on your list. Now you need these last three things. Go get 'em! Click your list to see what's left.
-	    			</p>
+	    			<h1>
+	    				You spend some time roaming the store, and you've found almost everything on your list. Just three things left. Click the list icon (<img class="" src="images/icon-shoppinglist.png" style="padding: 0 0.5em;height: 1.5em;vertical-align: bottom;">) above to see what's left.
+	    			</h1>
 	    		</div>
 	        <div id="aisle" style="display: flex; flex-flow: row; width: 100%; height: 60vh; overflow-y: auto;">        	
 	            <div class="aisleColumn">
@@ -342,17 +342,16 @@
     <div class="square-wrapper">
       <div class="square square-transition"> Outro </div>
     </div>
-    <div> <a class="Ch1-Sct2-Button" onClick="addHeight(this)">Continue</a> </div>
+    <!-- <div> <a class="Ch1-Sct2-Button" onClick="addHeight(this)">Continue</a> </div> -->
   </section>
 
-  <!-- Chapter 1: Background Image Section -->
-  	<section class="banner" id="ChX-SctX">
+
+  	<!-- <section class="banner" id="ChX-SctX">
     <buffer></buffer>
     <h2 class="parallax"> Section Title </h2>
     <p class="parallax_description"> Lorem ipsum dolor sit amet </p>
 	  <buffer></buffer>
-	  <!-- examples of how to use the stat adjuster function -->
-	  <!-- COOKIES DO NOT WORK ON CHROME FOR LOCAL FILES -->
+
 	  <div> <button onClick="callAction('eatFakeSandwich')">Eat a Fake Sandwich</button></div>
 	  <div> <button onClick="callAction('eatSandwich')">Eat a Real Sandwich</button></div>
 	  <div> <button onClick="callAction('attendScienceFair')">Skip work to go to science fair?</button></div>
@@ -362,8 +361,6 @@
 	  <buffer></buffer>
     <div style="height: 1em;"> <a class="Ch1-Sct1-Button" onClick="addHeight(this)">Continue</a> </div>
   </section>
-	
-  <!-- Chapter 1: Black Background Section -->
   	<section class="banner livingroom" id="Ch1-Sct2">
     <buffer></buffer>
     <div class="square-wrapper">
@@ -376,7 +373,9 @@
     <div id="itemDescription"></div>
 	  <buffer></buffer>
     <div style="height: 1em;"> <a class="Ch1-Sct2-Button" onClick="addHeight(this)">Continue</a> </div>
-  </section>
+  </section> -->
+
+ <!-- END OF CONTAINER -->
 </div>
 
 
