--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
   <!-- Science Fair -->
   <section class="banner intro-science">
-  	<div class="darkbackground" style="background-color: rgba(0, 0, 0, 0);">	  
+  	<div class="darkbackground" style="background-color: rgba(0, 0, 0, 0);height: 70vh;overflow-y: auto;">	  
 			<div class="flexContainer column" style="justify-content: center; flex: 0 1 auto; width: 33vw; height: 100%; padding: 0 5vw;">
 				<h1 style="margin: 0 0 1em;">Thursday Morning</h1>
 				<div>You've made it to Thursday. The coffee is hot, there are groceries in the fridge, bills are paid (mostly), and as you start to think maybe you'll make it through the weekend, Mia hands you a piece of paper that reads "SCIENCE FAIR! Thursday, 3pm" You remember Mia is a finalist. She gives you a look, a look that you used to give your mom, that says, "A good parent would be there." And, though you hate to miss work, you know she's right.</div>
